--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(43, 43, 43, 1);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+ul,li{
+  list-style: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+a{
+  text-decoration: none;
+  color: inherit;
+}
+/*START Header burger-menu */
+.container{
+  margin: 0, auto;
+  padding: 0 10px;
+}
+.header{
+  width: 100%;
+}
+.box{
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+}
+.logo{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.menu{
+  display: flex;
+  align-items: center;
+  font-size: 22px;
+  line-height: 28px;
+  gap:30px;
+}
+.mobile_btn{
+  display: none;
+}
+.sign-btn{
+  background-color: blueviolet;
+  border: none;
+  color:white; 
+  padding: 15px 35px;
+  text-align: center;
+  display: inline-block;
+  font-size: 18px;
+  border-radius: 15px;
+}
+@media(max-width: 900px){
+  .mobile_btn{
+    display: block;
+    position: absolute;
+    right:10px;
+    top: 27px;
+    cursor: pointer;
+    z-index: 10;
   }
-  to {
-    transform: rotate(360deg);
+  .menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    left: -100%;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(43, 43, 43, 1);
+    z-index: 10;
+    transition: left 1s;
+  }
+  .active{
+    left:0;
+  }
+  .menu a{
+    font-size: 28px;
   }
 }
+/*END Header burger-menu */
