--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ font-size: 16px;
   padding: 0 10px;
 }
 .header{
-  width: 100%;
+  /* width: 100%; */
 }
 .box{
   height: 80px;
@@ -642,4 +642,74 @@ flex-wrap: wrap;
   .auction-timer{
   margin: 20px;
   }
+}
+.howitworks{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  
+}
+.section-headline{
+  margin-left: 40px;
+    height: auto;
+    font-size: 38px;
+    padding: 50px;
+}
+.section-headline p{
+font-size: 22px;
+}
+.cards-row{
+  align-items: flex-start;
+  background-color: #00000000;
+  display: flex;
+  gap: 30px;
+  height: 337px;
+  justify-content: space-evenly;
+}
+.info-card{
+    width: 330px;
+height: 380px;
+display: flex;
+flex-direction: column;
+align-items: center;
+padding: 10px 30px 30px;
+gap: 20px;
+background: #3B3B3B;
+border-radius: 20px;
+}
+
+.icon{
+  background-color: #00000000;
+  height: 205.390625px;
+  margin-left: -17.7px;
+  margin-right: -17.7px;
+  margin-top: -22.7px;
+}
+.card-details{
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 10px
+}
+.setup{
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #3B3B3B;
+}
+.card-details{
+  background-color:#3B3B3B;
+}
+.p-text{
+  line-height: 16.8px;
+  text-align: center;
+  font-size: 12px;
+  background-color:#3B3B3B;
+}
+@media(max-width:770px){
+  .cards-row{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
 }
