--- a/src/App.css
+++ b/src/App.css
@@ -710,6 +710,119 @@ border-radius: 20px;
   .cards-row{
     display: flex;
     flex-wrap: wrap;
+  }  
+}
+.digest{
+  align-items: center;
+  align-self: stretch;
+  background-color: #2b2b2b;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 100px 195px 80px;
+  position: relative;
+}
+.subsribe-digest{
+  align-items: center;
+  background-color: #3b3b3b;
+  border-radius: 20px;
+  display: flex;
+  gap: 80px;
+  height: auto;
+  margin-left: -80px;
+  margin-right: -80px;
+  mix-blend-mode: normal;
+  padding: 60px;
+  position: relative;
+}
+.frame-block{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.headline-digest{
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.join{
+  background-color: transparent;
+  line-height: 45.6px;
+  font-weight: bold;
+  font-size: 38px;
+}
+.get{
+  background-color: transparent;
+  line-height: 35.2px;
+  font-size: 22px;
+}
+.subcribe{
+  background-color: #ffffff;
+  border-radius: 20px;
+  display: flex;
+  gap: 12px;
+  height: 60px;
+  padding: 16px 0px 16px 20px;
+}
+.subcribe input{
+  border: 0;
+  background-color: #ffffff;
+}
+.btn-sub{
+  align-items: center;
+    background-color: #a259ff;
+    border-radius: 20px;
+    cursor: pointer;
+    display: flex;
+    gap: 12px;
+    height: 60px;
+    justify-content: flex-end;
+    margin-top: -16px;
+    padding: 0px 50px;
+}
+.sub-text{
+  background-color: #a259ff;
+}
+.btn-sub img{
+  background-color: transparent;
+  height: 20px;
+  min-width: 20px;
+  position: relative;
+}
+@media(max-width:1100px){
+  .subsribe-digest{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }  
+}
+@media(max-width:550px){
+  .subsribe-digest{
+    width: 300px;
   }
-  
+  .subsribe-digest img{
+    width: 200px;
+  }
+  .frame-block{
+    width: 250px;
+  }
+.subcribe{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin-bottom: 20px;
+}
+.subcribe input {
+  width: 200px;
+}
+.btn-sub{
+  width: 200px;
+  margin-right: 10px;
+}
 }
