--- a/src/App.css
+++ b/src/App.css
@@ -780,7 +780,7 @@ border-radius: 20px;
     cursor: pointer;
     display: flex;
     gap: 12px;
-    height: 60px;
+    height: 40px;
     justify-content: flex-end;
     margin-top: -16px;
     padding: 0px 50px;
@@ -823,7 +823,6 @@ border-radius: 20px;
 }
 .btn-sub{
   width: 200px;
-  margin-right: 10px;
 }
 }
 /* Homepages end */
@@ -930,4 +929,27 @@ margin: 30px;
 }
 .icon{
   padding: 10px;
+}
+.crosline{
+ 
+}
+@media(max-width:1100px){
+  .crosline {
+display: none;
+  }
+}
+@media(max-width:1000px){
+  .footer-info{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .join-week  h4{
+    margin-top: 30px;
+  }
+  .explore h4{
+    margin-top: 30px;
+  }
+}
+.btn-sub{
+
 }
