--- a/src/App.css
+++ b/src/App.css
@@ -766,7 +766,7 @@ border-radius: 20px;
   border-radius: 20px;
   display: flex;
   gap: 12px;
-  height: 60px;
+  height: 50px;
   padding: 16px 0px 16px 20px;
 }
 .subcribe input{
@@ -780,7 +780,7 @@ border-radius: 20px;
     cursor: pointer;
     display: flex;
     gap: 12px;
-    height: 40px;
+    height: 50px;
     justify-content: flex-end;
     margin-top: -16px;
     padding: 0px 50px;
@@ -950,6 +950,92 @@ display: none;
     margin-top: 30px;
   }
 }
-.btn-sub{
-
+/* Footer ends */
+/* Create Accounts START */
+.create{
+  align-items: center;
+    align-self: stretch;
+    background-color: var(--background);
+    display: flex;
+    gap: 60px;
+    height: auto;
+    mix-blend-mode: normal;
+    position: relative;
+}
+.create-form{
+  align-items: flex-start;
+    background-color: transparent;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    gap: 40px;
+    height: auto;
+    padding: 100px 0px;
+    position: relative;
+}
+.create-headline{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  height: auto;
+  position: relative;
+  width: 325px;
+}
+.forms{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  height: auto;
+  position: relative;
+  width: 325px;
+}
+.type-forms{
+  align-items: flex-start;
+    align-self: stretch;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    height: auto;
+    position: relative;
+}
+.type-form{
+  align-items: center;
+  align-self: stretch;
+  background-color: #ffffff;
+  border: 1px solid;
+  border-color: #858584;
+  border-radius: 20px;
+  display: flex;
+  gap: 12px;
+  height: 46px;
+  mix-blend-mode: normal;
+  padding: 16px 20px;
+  position: relative;
+  
+}
+.type-form img, input{
+  background-color: #ffffff;
+  color: #3b3b3b;
+  border: 0;
+}
+.create-btn {
+  align-items: center;
+  align-self: stretch;
+  background-color:#a259ff;
+  border-radius: 20px;
+  cursor: pointer;
+  display: flex;
+  gap: 12px;
+  height: 46px;
+  justify-content: center;
+  mix-blend-mode: normal;
+  padding: 0px 50px;
+}
+.create-btn button{
+  background-color:#a259ff;
 }
