--- a/src/App.css
+++ b/src/App.css
@@ -1068,3 +1068,21 @@ display: none;
 gap:5px
   }
 }
+/* Connect Wallet START */
+.forms button{
+  border: 2px solid;
+  border-color:#a259ff;
+  border-radius: 20px;
+  cursor: pointer;
+  gap: 12px;
+  height: 60px;
+  padding: 0px 50px;
+  background-color: #3B3B3B;
+}
+.forms-img{
+  background-color: #3B3B3B;
+  margin-right: 10px;
+}
+.connect-headline div{
+  font-size: 25px;
+}
