--- a/src/App.css
+++ b/src/App.css
@@ -1086,3 +1086,249 @@ gap:5px
 .connect-headline div{
   font-size: 25px;
 }
+/* Connect-Wallet ends */
+/* Market place START */
+.headline-marketplace{
+  align-items: center;
+  align-self: stretch;
+  background-color: var(--background);
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 10px 0px;
+  position: relative
+}
+.headline-section{
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 680px;
+}
+.market-text{
+      align-items: flex-start;
+    align-self: stretch;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: auto;
+    position: relative;
+}
+.market-text h1{
+  font-size: 51px;
+line-height: 110%;
+}
+.search-table{
+  align-items: center;
+  background-color: transparent;
+  border: 1px solid;
+  border-color: #3b3b3b;
+  border-radius: 20px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  height: 62px;
+  justify-content: center;
+  margin-bottom: -1px;
+  margin-left: -1px;
+  margin-right: -1px;
+  padding: 12px 0px;
+  position: relative;
+  width: 682px;
+}
+.table-text{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  height: auto;
+  justify-content: space-between;
+  padding: 0px 20px;
+  position: relative;
+  width: 680px;
+}
+.table-text input{
+  background-color: transparent;
+  border: 0;
+  min-width: 590px;
+}
+.table-text img{
+    
+    background-color: transparent;
+    height: 24px;
+    min-width: 24px;
+    position: relative;
+}
+/* Market place END */
+.marketplace-section{
+  align-items: center;
+  align-self: stretch;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  mix-blend-mode: normal;
+  position: relative;
+}
+.line-frame{
+  align-items: center;
+  background-color: #2b2b2b;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  mix-blend-mode: normal;
+  position: relative;
+  width: 834px;
+}
+.column-frame{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  height: auto;
+  position: relative;
+  width: 680px;
+}
+.column-tabs{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex: 1;
+  height: auto;
+  position: relative;
+}
+.column-tabs2{
+  align-items: center;
+  background-color: transparent;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-color: #858584;
+  border-left-style: none;
+  border-right-style: none;
+  border-top-style: none;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+  height: 60px;
+  justify-content: center;
+  padding: 0px 30px;
+  position: relative;
+}
+.tabs-nft{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  width: fit-content;
+}
+.tabs-num{
+  align-items: center;
+  background-color: #858584;
+  border-radius: 20px;
+  display: flex;
+  gap: 10px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 5px 10px;
+  position: relative;
+  width: fit-content;
+}
+.tabs-302{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+  width: fit-content;
+}
+.tabs{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+  height: 60px;
+  justify-content: center;
+  padding: 0px 30px;
+  position: relative;
+}
+.tabs-col{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  width: fit-content;
+}
+.tabs-col2{
+  align-items: center;
+  background-color: var(--background---secondary);
+  border-radius: 20px;
+  display: flex;
+  gap: 10px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 5px 10px;
+  position: relative;
+  width: fit-content;
+}
+.tabs-67{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+  width: fit-content;
+}
+.nft-card-section{
+  align-items: center;
+  align-self: stretch;
+  background-color: #3b3b3b;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+
+ 
+  gap: 30px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 60px;
+  position: relative;
+}
+.nft-card-section .more-card {
+  background-color:#2b2b2b;
+}
+.nft-card-section h3, li{
+  background-color:#2b2b2b;
+}
+.nft-card-section .more-body {
+  background-color:#2b2b2b;
+}
+.nft-card-section .more-info{
+  background-color:#2b2b2b;
+}
+
+.nft-card-section .more__ava  {
+  background-color:#2b2b2b;
+}
+.nft-card-section .eth{
+  background-color:#2b2b2b;
+}
+
+
+
+
