--- a/src/App.css
+++ b/src/App.css
@@ -1349,7 +1349,456 @@ width: 400px;
   width: 300px;
 }
 }
+/* Marketplace desktop END */
+/* Rankings desktop Start */
+.rankings-section{
+  align-items: center;
+  align-self: stretch;
+  background-color: var(--background);
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 10px 0px;
+  position: relative
+}
+.rankings-times{
+  align-items: center;
+  align-self: stretch;
+  background-color: var(--background);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 0px 10px;
+  position: relative;
+}
+.ranking-line{
+  align-items: flex-start;
+    background-color: transparent;
+    display: flex;
+    height: auto;
+    position: relative;
+    width: 680px;
+}
+.r-line{
+  align-items: center;
+  background-color: transparent;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-color: var(--caption--label-text);
+  border-left-style: none;
+  border-right-style: none;
+  border-top-style: none;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+  height: 60px;
+  justify-content: center;
+  padding: 0px 30px;
+  position: relative;
+}
+.today{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  width: fit-content;
+}
+.weeks{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+  height: 60px;
+  justify-content: center;
+  padding: 0px 30px;
+}
+.week{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  width: fit-content;
+}
+.mounths{
+  align-items: center;
+    background-color: transparent;
+    display: flex;
+    flex: 1;
+    gap: 16px;
+    height: 60px;
+    justify-content: center;
+    padding: 0px 30px;
+    position: relative;
+}
+.mounth{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  width: fit-content;
+}
+.all-times{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+  height: 60px;
+  justify-content: center;
+  padding: 0px 30px;
+  position: relative;
+}
+.all-time{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  width: fit-content;
+}
+.rankings-cards{
+  align-items: center;
+  align-self: stretch;
+  background-color: var(--background);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: auto;
+  mix-blend-mode: normal;
+  padding: 40px 0px;
+  position: relative;
 
+}
+.rankings-table{
+  align-items: center;
+  background-color: transparent;
+  border: 1px solid;
+  border-color: var(--background---secondary);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  margin-top: -1px;
+  padding: 12px 0px;
+  position: relative;
+  width: 692px;
+}
+.table-header{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  height: auto;
+  justify-content: space-between;
+  padding: 0px 20px;
+  position: relative;
+  width: 690px;
+}
+.rank-artist{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  gap: 20px;
+  height: auto;
+  position: relative;
+  width: 430px;
+}
+.rank-number{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  width: 30px;
+  color:  #858584;
+}
+.artist{
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+  width: fit-content;
+  color:  #858584;
+}
+.stats-header{
+  align-items: center;
+    background-color: transparent;
+    display: flex;
+    gap: 20px;
+    height: auto;
+    justify-content: flex-end;
+    position: relative;
+    width: fit-content;
+}
+.change{
+  align-self: stretch;
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+  color:  #858584;
+}
+.nft-sold{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  width: 160px;
+}
+.sold{
+  align-self: stretch;
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+  color: #858584 ;
+margin-left: 10px;
+}
+.stats-volume{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  width: 100px;
+}
+.volume{
+  align-self: stretch;
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+  color:  #858584;
+}
+.table-items{
+  align-items: center;
+  background-color: #3b3b3b;
+  border-radius: 20px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: 60px;
+  justify-content: center;
+  mix-blend-mode: normal;
+  padding: 12px 0px;
+  position: relative;
+  width: 690px;
+}
+.table-item{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  height: auto;
+  justify-content: space-between;
+  padding: 0px 20px;
+  position: relative;
+  width: 690px;
+}
+.rank{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  gap: 20px;
+  height: auto;
+  position: relative;
+  width: 410px;
+}
+.r-number{
+  background-color: transparent;
+  border-radius: 20px;
+  height: 24px;
+  min-width: 24px;
+  position: relative;
+}
+.num-1{
+  background-color: transparent;
+  height: 22px;
+  left: 6px;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  mix-blend-mode: normal;
+  position: absolute;
+  text-align: center;
+  top: -1px;
+  white-space: nowrap;
+  width: auto;
+  color: #858584 ;
+}
+.asrtis-card{
+  align-items: center;
+  background-color: transparent;
+  border-radius: 20px;
+  cursor: pointer;
+  display: flex;
+  gap: 12px;
+  height: auto;
+  pointer-events: auto;
+  position: relative;
+  transition: all 0.3s ease;
+  width: 240px;
+}
+.artist-ava{
+  align-items: flex-start;
+  background-color: transparent;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+  height: auto;
+  mix-blend-mode: normal;
+  pointer-events: auto;
+  position: relative;
+  transition: all 0.3s ease;
+  width: fit-content;
+}
+.assets-ava{
+  background-color: transparent;
+  height: 24px;
+  min-width: 24px;
+  mix-blend-mode: normal;
+  position: relative;
+}
+.name-ava{
+  background-color: transparent;
+  flex: 1;
+  letter-spacing: 0.00px;
+  line-height: 30.8px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+}
+.status-ava{
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  gap: 20px;
+  height: auto;
+  justify-content: flex-end;
+  position: relative;
+  width: fit-content;
+}
+.change-status{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  
+}
+.sold-nfts{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+ 
+}
+.sold-nft{
+  align-self: stretch;
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+}
+.status{
+  align-self: stretch;
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+  color:  #00AC4F;
+}
+.ava-volume{
+  align-items: flex-start;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  height: auto;
+  overflow: hidden;
+  position: relative;
+  width: 100px;
+}
+.vol{
+  align-self: stretch;
+  background-color: transparent;
+  letter-spacing: 0.00px;
+  line-height: 22.4px;
+  margin-top: -1px;
+  mix-blend-mode: normal;
+  position: relative;
+  text-align: left;
+  white-space: nowrap;
+}
+.rank-img{
+  background-color: transparent;
+  height: 24px;
+  left: 0px;
+  mix-blend-mode: normal;
+  object-fit: cover;
+  position: absolute;
+  top: 0px;
+  width: 24px;
 
+}
+/*. Rankings desktop end */
 
 
